--- a/index.html
+++ b/index.html
@@ -25,14 +25,33 @@
         <img src="assets/img/logo.png" width="53%" height="33%">
       </div>
 
-      <div class="ulis">
-        <ul class="ullar">
-          <li><a href="">Home</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">Pages</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Contact Us</a></li>
+      <div class="ul-box">
+        <ul class="main-ul">
+          <li class="drop-li nav-item"><a href="">Home</a>
+            <ul class="drop-ul">
+              <li><a href="">Home 1</a></li>
+              <li><a href="">Home 2</a></li>
+              <li><a href="">Home 3</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a href="">Shop</a></li>
+          <li class="nav-item drop-li"><a href="">Pages</a>
+            <ul class="drop-ul">
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Team Single</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Testimionals</a></li>
+              <li><a href="">Team members</a></li>
+          </ul>
+          </li>
+          <li class="nav-item drop-li"><a href="">Blog</a>
+            <ul class="drop-ul">
+              <li><a href="">Standart Post</a></li>
+              <li><a href="">Gallery Post</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="">About Us</a></li>
+          <li class="nav-item"><a href="">Contact Us</a></li>
         </ul>
       </div>
       <div class="icons">
@@ -48,28 +67,55 @@
   <!-- ################################################### -->
   <!-- Slider Section -->
   <!-- ################################################### -->
-  <!-- <section class="slider container-fluid">
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <section class="slider container-fluid">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et soluta quam commodi vel exercitationem
-            voluptatem! Alias blanditiis delectus harum vitae hic eaque facere rem necessitatibus cupiditate, aspernatur
-            quasi, voluptate maiores.
-          </h1>
-          <img src="assets/img/h1-slider1.png" width="20%" height="20%">
+        <div class="carousel-item active">
+          <div class="row pdng">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="text">
+                <h1>The Glory Cambalk Furniture
+                </h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore fugiat neque vitae fuga asperiores voluptates rerum deserunt nam magni quae.</p>
+                <button>Purchase Now</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 ed">
+               <div class="img">
+                <img src="assets/img/h1-slider1.png" width="50%" height="90%" alt="...">
+               </div>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="assets/img/h1-slider2.png" width="20%" height="20%">
+        <div class="carousel-item ">
+          <div class="row pdng">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="text">
+                <h1>The Glory Cambalk Furniture
+                </h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore fugiat neque vitae fuga asperiores voluptates rerum deserunt nam magni quae.</p>
+                <button>Purchase Now</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 ed">
+               <div class="img">
+                <img src="assets/img/h1-slider2.png" width="80%" height="93%" alt="...">
+               </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
-    </div>
-  </section> -->
 
+    </div>
+
+  </section>
 
 
   <!-- ################################################### -->
@@ -124,12 +170,12 @@
             <div class="one">
               <div class="photo">
                 <img src="assets/img/15.jpg" width="100%" height="100%">
-                 <div class="icon">
-              <i class="fa-brands fa-amazon-pay"></i>
-              <i class="fa-solid fa-eye"></i>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-basket-shopping"></i>
-            </div>
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
               </div>
               <h1>Coffe Table</h1>
               <p>$495.00</p>
@@ -137,18 +183,18 @@
           </div>
           <div class="item d-lg-block d-md-block d-sm-none ">
             <div class="one">
-                <div class="photo">
-                  <img src="assets/img/05.jpg" width="100%" height="100%">
-                   <div class="icon">
-                <i class="fa-brands fa-amazon-pay"></i>
-                <i class="fa-solid fa-eye"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-basket-shopping"></i>
-              </div>
+              <div class="photo">
+                <img src="assets/img/05.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
                 </div>
+              </div>
               <h1>Steel Chair in Modern</h1>
               <p>$489.00</p>
-             
+
             </div>
           </div>
           <div class="item">
@@ -166,12 +212,12 @@
                 </div>
               </div>
             </div>
-            
+
           </div>
         </div>
       </div>
       <div class=" blue col-lg-4 col-md-5 col-sm-12">
-<img src="assets/img/02-1.jpg" width="98%" height="98%">
+        <img src="assets/img/02-1.jpg" width="98%" height="98%">
       </div>
     </div>
   </section>
@@ -196,13 +242,72 @@
   <!-- ################################################### -->
   <!-- Table Collection Section -->
   <!-- ################################################### -->
+  <section class="chair container-fluid">
+    <div class="row p-0 m-0">
+      <h1 class="head">Table Collection</h1>
+      <p class="para">There are some special product that recently comes</p>
+      <div class="col-lg-4 col-md-7 col-sm-12">
+        <img src="assets/img/03.jpg" width="100%" height="98%">
+      </div>
+      <div class=" blue col-lg-8 col-md-5 col-sm-12">
+        <div class="left-furnitures">
+          <div class="item">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/10.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Glass Table Dragonfly</h1>
+              <p>$489.00</p>
+            </div>
+          </div>
+          <div class="item d-lg-block d-md-block d-sm-none ">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/06.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Gray Modern Table</h1>
+              <p>$489.00</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/09.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Wooden Dining Table</h1>
+              <p>$489.00</p>
 
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
 
   <!-- ################################################### -->
-  <!-- Beds Storage Section -->
+  <!-- Beds Closet Storage Section -->
   <!-- ################################################### -->
 
   <section class="beds container-fluid">
@@ -220,6 +325,68 @@
   <!-- ################################################### -->
   <!-- Bedroom Section -->
   <!-- ################################################### -->
+  <section class="chair container-fluid">
+    <div class="row p-0 m-0">
+      <h1 class="head">Choose Your Chair</h1>
+      <p class="para">There are some special product that recently comes</p>
+      <div class="col-lg-8 col-md-7 col-sm-12">
+        <div class="left-furnitures">
+          <div class="item">
+            <div class="one">
+              <img src="assets/img/bed1.jpg" width="100%" height="82%">
+              <h1>Pink Color Kids Bed</h1>
+              <p>$199.00</p>
+              <div class="two">
+                <img src="assets/img/bed2.jpg" width="100%" height="82%">
+                <div class="icons">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item d-lg-block d-md-block d-sm-none ">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/12.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>White Feather Pillow</h1>
+              <p>$69.00</p>
+
+            </div>
+          </div>
+          <div class="item">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/11.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Bed With Pillow</h1>
+              <p>$300.00</p>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class=" blue col-lg-4 col-md-5 col-sm-12">
+        <img src="assets/img/bedroom.jpg" width="100%" height="98%">
+      </div>
+    </div>
+  </section>
 
 
   <!-- ################################################### -->
@@ -230,7 +397,7 @@
     <div class="center-text">
       <h1>Golden Offer</h1>
       <h2>Get Up To 50% Instant Cashback</h2>
-      <button>Shopping Now</button>
+      <a class="button">Shopping Now</a>
     </div>
   </section>
 
@@ -238,92 +405,94 @@
   <!-- ################################################### -->
   <!-- Blogs Section -->
   <!-- ################################################### -->
-<section class="blog-text">
-<div class="text">
-  <h1>From The  Blog</h1>
-  <p>Fashion Trends We’re Looking Forward</p>
-</div>
-</section>
+  <section class="blog-text">
+    <div class="text">
+      <h1>From The Blog</h1>
+      <p>Fashion Trends We’re Looking Forward</p>
+    </div>
+  </section>
 
 
-<section class="blogs container">
-<div class="row">
-  <div class="blog1 col-lg-4 col-md-4">
-    <div class="blog">
-      <img src="assets/img/blog1.jpg" class="blogimg" >
-      <h6>Chairs</h6>
-      <h1>Brands Fashion Give You Best Chance</h1>
-      <p>Praising pain was born and I will give you a complete account of the system, ... </p>
+  <section class="blogs container">
+    <div class="row">
+      <div class="blog1 col-lg-4 col-md-4">
+        <div class="blog">
+          <img src="assets/img/blog1.jpg" class="blogimg">
+          <h6>Chairs</h6>
+          <h1>Brands Fashion Give You Best Chance</h1>
+          <p>Praising pain was born and I will give you a complete account of the system, ... </p>
+        </div>
+      </div>
+      <div class="blog1 col-lg-4 col-md-4">
+        <div class="blog">
+          <img src="assets/img/blog2.jpg" class="blogimg">
+          <h6>Decoration</h6>
+          <h1>New Fashion Store Opening</h1>
+          <p>Praising pain was born and I will give you a complete account of the system, ... </p>
+        </div>
+      </div>
+      <div class="blog1 col-lg-4 col-md-4">
+        <div class="blog">
+          <img src="assets/img/blog3.jpg" class="blogimg">
+          <h6>Furniture</h6>
+          <h1>Fashion Give You Best Chance</h1>
+          <p>Praising pain was born and I will give you a complete account of the system, ... </p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="blog1 col-lg-4 col-md-4">
-    <div class="blog">
-      <img src="assets/img/blog2.jpg"class="blogimg" >
-      <h6>Decoration</h6>
-      <h1>New Fashion Store Opening</h1>
-      <p>Praising pain was born and I will give you a complete account of the system, ... </p>
-    </div>
-  </div>
-  <div class="blog1 col-lg-4 col-md-4">
-    <div class="blog">
-      <img src="assets/img/blog3.jpg" class="blogimg">
-      <h6>Furniture</h6>
-      <h1>Fashion Give You Best Chance</h1>
-      <p>Praising pain was born and I will give you a complete account of the system, ... </p>
-    </div>
-  </div>
-</div>
-</section>
+  </section>
 
   <!-- ################################################### -->
   <!-- Footer Section -->
   <!-- ################################################### -->
-<footer class="container-fluid">
-<div class="row">
-  <div class="col-lg-4 col-md-3 col-sm-6 order-lg-1 order-md-1 order-sm-1 ">
-<div class="box1">
-  <img src="assets/img/logo.png" width="55%" height="50%">
-  <p>Easy to update text from footer widget area.</p>
-  <p>48 Oxford, London 79759, UK.</p>
-  <p>Phone: (123) 4567 890  </p>
-  <p>info@company.com  </p>
-  
-</div>
-  </div>
-<div class="col-lg-3 col-md-3 col-sm-6 order-lg-2  order-md-2 order-sm-4">
-<div class="box2">
-  <h1>Customer Service</h1>
-  <a href="">Help Center</a>
-  <a href="">Contact Us</a>
-  <a href="">Get Paid for Your Feedback</a>
-  <a href="">Report Abuse  </a>
-  <a href="">Policies & Rules</a>
-</div>
-  </div>
-  <div class="col-lg-2 col-md-3 col-sm-6 order-lg-3 order-md-3 order-sm-3">
-<div class="box2">
-  <h1>Our Stories</h1>
-  <a href="">New York City</a>
-  <a href="">London SF</a>
-  <a href="">Cockfosters BP</a>
-  <a href="">Los Angeles</a>
-  <a href="">Vegas</a>
-</div>
-  </div>
-  <div class="col-lg-3 col-md-3 col-sm-6 order-lg-4 order-md-4 order-sm-2">
-<div class="box2 border-bottom">
-  <h1>Newsletter Signup</h1>
-  <p>Delivering the latest product trends & industry news straight to your inbox</p>
- <div class="d-flex">
-  <input type="text" placeholder="Your Email Address">
-  <button>Subscribe</button>
- </div>
-</div>
-  </div>
-</div>
-</footer>
+  <footer class="ftr container-fluid">
+    <div class="row">
+      <div class="col-lg-4 col-md-3 col-sm-6 order-lg-1 order-md-1 order-sm-1 ">
+        <div class="box1">
+          <img src="assets/img/logo.png" width="55%" height="50%">
+          <p>Easy to update text from footer widget area.</p>
+          <p>48 Oxford, London 79759, UK.</p>
+          <p>Phone: (123) 4567 890 </p>
+          <p>info@company.com </p>
 
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 order-lg-2  order-md-2 order-sm-4">
+        <div class="box2">
+          <h1>Customer Service</h1>
+          <a href="">Help Center</a>
+          <a href="">Contact Us</a>
+          <a href="">Get Paid for Your Feedback</a>
+          <a href="">Report Abuse </a>
+          <a href="">Policies & Rules</a>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-3 col-sm-6 order-lg-3 order-md-3 order-sm-3">
+        <div class="box2">
+          <h1>Our Stories</h1>
+          <a href="">New York City</a>
+          <a href="">London SF</a>
+          <a href="">Cockfosters BP</a>
+          <a href="">Los Angeles</a>
+          <a href="">Vegas</a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 order-lg-4 order-md-4 order-sm-2">
+        <div class="box2 border-bottom">
+          <h1>Newsletter Signup</h1>
+          <p>Delivering the latest product trends & industry news straight to your inbox</p>
+          <div class="d-flex">
+            <input type="text" placeholder="Your Email Address">
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
+  <section class="ft-text">
+    <h1>© 2022 Wodex all right reserved</h1>
+  </section>
 
 
 
