added media query

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 ed">
                <div class="img">
-                <img src="assets/img/h1-slider1.png" width="50%" height="90%" alt="...">
+                <img src="assets/img/h1-slider1.png" class="slider1img">
                </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 ed">
                <div class="img">
-                <img src="assets/img/h1-slider2.png" width="80%" height="93%" alt="...">
+                <img src="assets/img/h1-slider2.png" class="slider2img">
                </div>
             </div>
           </div>
@@ -124,32 +124,32 @@
 
   <section class="partners container-fluid">
     <div class="row partners-alt">
-      <div class="col-lg-2 col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-1.png" class="photo4">
         </div>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-2.png" class="photo4">
         </div>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-3.png" class="photo4">
         </div>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-4.png" class="photo4">
         </div>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-4 ">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-5.png" class="photo4">
         </div>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-4">
+      <div class="col-lg-2 col-md-2 col-sm-4 col-2">
         <div class="item">
           <img src="assets/img/logo-7.png" class="photo4">
         </div>
@@ -181,7 +181,7 @@
               <p>$495.00</p>
             </div>
           </div>
-          <div class="item d-lg-block d-md-block d-sm-none ">
+          <div class="item d-lg-block d-md-none d-sm-none ">
             <div class="one">
               <div class="photo">
                 <img src="assets/img/05.jpg" width="100%" height="100%">
@@ -244,13 +244,43 @@
   <!-- ################################################### -->
   <section class="chair container-fluid">
     <div class="row p-0 m-0">
-      <h1 class="head">Table Collection</h1>
+      <h1 class="head">Choose Your Table</h1>
       <p class="para">There are some special product that recently comes</p>
-      <div class="col-lg-4 col-md-7 col-sm-12">
+      <div class=" blue col-lg-4 col-md-5 col-sm-12">
         <img src="assets/img/03.jpg" width="100%" height="98%">
       </div>
-      <div class=" blue col-lg-8 col-md-5 col-sm-12">
+      <div class="col-lg-8 col-md-7 col-sm-12">
         <div class="left-furnitures">
+          <div class="item">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/15.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Glass Table</h1>
+              <p>$300.00</p>
+            </div>
+          </div>
+          <div class="item d-lg-block d-md-non d-sm-none ">
+            <div class="one">
+              <div class="photo">
+                <img src="assets/img/09.jpg" width="100%" height="100%">
+                <div class="icon">
+                  <i class="fa-brands fa-amazon-pay"></i>
+                  <i class="fa-solid fa-eye"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </div>
+              </div>
+              <h1>Modern Table</h1>
+              <p>$69.00</p>
+            </div>
+          </div>
           <div class="item">
             <div class="one">
               <div class="photo">
@@ -262,46 +292,17 @@
                   <i class="fa-solid fa-basket-shopping"></i>
                 </div>
               </div>
-              <h1>Glass Table Dragonfly</h1>
-              <p>$489.00</p>
+              <h1>Wooden Rounded Table </h1>
+              <p>$300.00</p>
             </div>
-          </div>
-          <div class="item d-lg-block d-md-block d-sm-none ">
-            <div class="one">
-              <div class="photo">
-                <img src="assets/img/06.jpg" width="100%" height="100%">
-                <div class="icon">
-                  <i class="fa-brands fa-amazon-pay"></i>
-                  <i class="fa-solid fa-eye"></i>
-                  <i class="fa-regular fa-heart"></i>
-                  <i class="fa-solid fa-basket-shopping"></i>
-                </div>
-              </div>
-              <h1>Gray Modern Table</h1>
-              <p>$489.00</p>
-            </div>
-          </div>
-          <div class="item">
-            <div class="one">
-              <div class="photo">
-                <img src="assets/img/09.jpg" width="100%" height="100%">
-                <div class="icon">
-                  <i class="fa-brands fa-amazon-pay"></i>
-                  <i class="fa-solid fa-eye"></i>
-                  <i class="fa-regular fa-heart"></i>
-                  <i class="fa-solid fa-basket-shopping"></i>
-                </div>
-              </div>
-              <h1>Wooden Dining Table</h1>
-              <p>$489.00</p>
-
-            </div>
-
           </div>
         </div>
       </div>
+      
     </div>
   </section>
+
+
 
 
 
@@ -347,7 +348,7 @@
               </div>
             </div>
           </div>
-          <div class="item d-lg-block d-md-block d-sm-none ">
+          <div class="item d-lg-block d-md-non d-sm-none ">
             <div class="one">
               <div class="photo">
                 <img src="assets/img/12.jpg" width="100%" height="100%">
