--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1>The Glory Cambalk Furniture
                 </h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore fugiat neque vitae fuga asperiores voluptates rerum deserunt nam magni quae.</p>
-                <button>Purchase Now</button>
+                <button class="now">Submit</button>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 ed">
@@ -100,7 +100,7 @@
                 <h1>The Glory Cambalk Furniture
                 </h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore fugiat neque vitae fuga asperiores voluptates rerum deserunt nam magni quae.</p>
-                <button>Purchase Now</button>
+                <button class="now">Submit</button>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 ed">
@@ -181,7 +181,7 @@
               <p>$495.00</p>
             </div>
           </div>
-          <div class="item d-lg-block d-md-none d-sm-none ">
+          <div class="item d-lg-block d-md-none d-sm-none d-none ">
             <div class="one">
               <div class="photo">
                 <img src="assets/img/05.jpg" width="100%" height="100%">
@@ -266,7 +266,7 @@
               <p>$300.00</p>
             </div>
           </div>
-          <div class="item d-lg-block d-md-non d-sm-none ">
+          <div class="item d-lg-block d-md-non d-sm-none d-none">
             <div class="one">
               <div class="photo">
                 <img src="assets/img/09.jpg" width="100%" height="100%">
@@ -348,7 +348,7 @@
               </div>
             </div>
           </div>
-          <div class="item d-lg-block d-md-non d-sm-none ">
+          <div class="item d-lg-block d-md-non d-sm-none d-none ">
             <div class="one">
               <div class="photo">
                 <img src="assets/img/12.jpg" width="100%" height="100%">
